<resources>
    <string name="app_name">Hotmob Android SDK Example</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_location">Location Permission</string>
    <string name="action_reload_toggle">Reload Toggle</string>
    
    <string name="reload_toggle_msg">Auto reload is now %s</string>
    <string name="reload_toggle_yes">Enable</string>
    <string name="reload_toggle_no">Disable</string>

    <string name="adcode_here">Ad Code Here</string>
    <string name="loading">Loading</string>
    <string name="load_fail">Load fail</string>
    <string name="noaddcallback">No ad result</string>
    <string name="width_320">Width 320</string>
    <string name="width_200">Width 200</string>
    <string name="width_fullscreenwidth">Full Screen Width</string>
    <string name="banner_hide">Banner hide</string>
    <string name="custom_adcode_hint">Type your adCode here</string>
    <string name="custom_iu_hint">Type your IU here</string>

    <string name="interstitial_item_null">Interstitial null</string>

    <string name="data_example_intro">Check out Logcat to see the event calls.</string>
    <string name="data_example_btn">Click action event</string>
    <string name="data_example_null_btn">Null param event</string>
    <string name="timed_event_start">Start tracking event</string>
    <string name="timed_event_end">Stop and send</string>

    <string name="reload_replace_fragment">Replace Fragment</string>
    <string name="reload_add_fragment">Add Fragment</string>
    <string name="reload_add_activity">Add Activity</string>
    <string name="reload_activity_title">Activity %d</string>
    <string name="blank_fragment_title">Fragment %d</string>

    <string name="scrollview_title">Here is a ScrollView</string>
    <string name="scrollview_intro">Here is a ScrollView. Here is a ScrollView. Here is a ScrollView. Here is a ScrollView. Here is a ScrollView. Here is a ScrollView. Here is a ScrollView. Here is a ScrollView. Here is a ScrollView.</string>

    <string name="tab_1">Tab 1</string>
    <string name="tab_2">Tab 2</string>
    <string name="tab_3">Tab 3</string>

    <string name="internal_title">This is an internal page referred by Click to Internal Banner</string>

    <string name="interstitial_orientation_test">Open Interstitial</string>
    <string name="video_interstitial_orientation_test">Open Video Interstitial</string>

    <string name="page1_to_page2">Open Page 2</string>
    <string name="page1_title">Page 1</string>
    <string name="page2_title">Page 2</string>

    <string name="to_no_ad">To No Ad Page</string>
    <string name="no_ad_fragment_intro">This Fragment has no Banner. And the Video Banner in AdFragment is hidden because of its own handling.</string>

    <string name="skip_resume_interstitial_once">Skip resume Interstitial once</string>
    <string name="page_with_no_resume_interstitial">Go to page with no resume Interstitial</string>
    <string name="page_with_no_resume_interstitial_description">This page with not have resume Interstitial when resume app</string>

    <string name="open_deep_link_interstitial">Open deep link Interstitial</string>

    <!-- Menu -->

    <string name="menu_banner">Banner</string>
    <string name="menu_html_banner">HTML &amp; MRAID</string>
    <string name="menu_video_banner">Video</string>
    <string name="menu_mediation_banner">Mediation</string>
    <string name="menu_other_banner">Other</string>

    <string name="menu_interstitial">Interstitial</string>
    <string name="menu_html_interstitial">HTML &amp; MRAID</string>
    <string name="menu_video_interstitial">Video</string>
    <string name="menu_mediation_interstitial">Mediation</string>
    <string name="menu_other_interstitial">Other</string>

    <string name="menu_reload">Auto Reload</string>
    <string name="menu_reload_add_fragment">Add Fragment</string>
    <string name="menu_reload_replace_fragment">Replace Fragment</string>
    <string name="menu_reload_viewpager">ViewPager</string>
    <string name="menu_reload_recycleview">RecycleView</string>
    <string name="menu_launch_interstitial">Launch Interstitial</string>
    <string name="menu_fragment_with_no_ad">Fragment with no Ad</string>
    <string name="menu_skip_resume_interstitial">Skip Interstitial Resume</string>
    <string name="menu_deep_link_interstitial">Deep Link Interstitial</string>

    <string name="menu_scrollableview">Scrollable View</string>
    <string name="menu_scrollview">ScrollView</string>
    <string name="menu_listview">ListView</string>
    <string name="menu_recycleview">RecycleView</string>

    <string name="menu_datacollection">Data Collection</string>
    <string name="menu_datacollection_normal">Example</string>

    <string name="menu_compatibility">Compatibility</string>
    <string name="menu_backward_compatible">Backward Compatible</string>

    <!-- Image -->

    <string-array name="creative_actions">
        <item name="inapp">In App</item>
        <item name="external">External</item>
        <item name="playstore">Google Play</item>
        <item name="dial">Dial</item>
        <item name="sms">SMS</item>
        <item name="email">Email</item>
        <item name="video">Video</item>
        <item name="youtube">Youtube</item>
        <item name="internal">Internal</item>
    </string-array>

    <string-array name="image_banner_adcodes">
        <item name="inapp">hotmob_android_v2_html_inapp_banner</item>
        <item name="external">hotmob_android_v2_html_external_banner</item>
        <item name="playstore">hotmob_android_v2_html_playstore_banner</item>
        <item name="dial">hotmob_android_v2_html_dial_banner</item>
        <item name="sms">hotmob_android_v2_html_sms_banner</item>
        <item name="email">hotmob_android_v2_html_email_banner</item>
        <item name="video">hotmob_android_v2_html_video_banner</item>
        <item name="youtube">hotmob_android_v2_html_youtube_banner</item>
        <item name="internal">hotmob_android_v2_html_internal_banner</item>
    </string-array>

    <!-- HTML & MRAID -->

    <string-array name="html_creative_actions">
        <item name="celtra">Celtra</item>
        <item name="celtra_expand">Celtra Maxi</item>
        <item name="celtra_resize">Celtra Resize</item>
        <item name="sizmek">Sizmek</item>
        <item name="dcm">DCM</item>
        <item name="dcm2video">DCM to Video</item>
    </string-array>

    <string-array name="html_banner_adcodes">
        <item name="celtra">hotmob_android_v2_celtra_banner</item>
        <item name="celtra_maxi">hotmob_android_v2_celtra_banner_maxi</item>
        <item name="celtra_resize">hotmob_android_v2_celtra_banner_resize</item>
        <item name="sizmek">hotmob_android_v2_sizmek_banner</item>
        <item name="dcm">hotmob_android_v2_dcm_banner</item>
        <item name="dcm2video">hotmob_android_v2_dcm_video_banner</item>
    </string-array>

    <string-array name="html_creative_actions_interstitial">
        <item name="inapp">In App</item>
        <item name="external">External</item>
        <item name="playstore">Google Play</item>
        <item name="dial">Dial</item>
        <item name="sms">SMS</item>
        <item name="email">Email</item>
        <item name="video">Video</item>
        <item name="youtube">Youtube</item>
        <item name="internal">Internal</item>
    </string-array>

    <string-array name="html_interstitial_adcodes">
        <item name="inapp">hotmob_android_v2_html_inapp_popup</item>
        <item name="external">hotmob_android_v2_html_external_popup</item>
        <item name="playstore">hotmob_android_v2_html_playstore_popup</item>
        <item name="dial">hotmob_android_v2_html_dial_popup</item>
        <item name="sms">hotmob_android_v2_html_sms_popup</item>
        <item name="email">hotmob_android_v2_html_email_popup</item>
        <item name="video">hotmob_android_v2_html_video_popup</item>
        <item name="youtube">hotmob_android_v2_html_youtube_popup</item>
        <item name="internal">hotmob_android_v2_html_internal_popup</item>
    </string-array>

    <!-- Video -->

    <string-array name="video_creative_actions">
        <item name="inapp">In App</item>
        <item name="external">External</item>
        <item name="playstore">Google Play</item>
        <item name="dial">Dial</item>
        <item name="sms">SMS</item>
        <item name="email">Email</item>
        <item name="youtube">Youtube</item>
        <item name="internal">Internal</item>
    </string-array>

    <string-array name="video_banner_adcodes">
        <item name="inapp">hotmob_android_v2_video_inapp_banner</item>
        <item name="external">hotmob_android_v2_video_external_banner</item>
        <item name="playstore">hotmob_android_v2_video_playstore_banner</item>
        <item name="dial">hotmob_android_v2_video_dial_banner</item>
        <item name="sms">hotmob_android_v2_video_sms_banner</item>
        <item name="email">hotmob_android_v2_video_email_banner</item>
        <item name="youtube">hotmob_android_v2_video_youtube_banner</item>
        <item name="internal">hotmob_android_v2_video_internal_banner</item>
    </string-array>

    <string-array name="video_interstitial_adcodes">
        <item name="inapp">hotmob_android_v2_video_inapp_popup</item>
        <item name="external">hotmob_android_v2_video_external_popup</item>
        <item name="playstore">hotmob_android_v2_video_playstore_popup</item>
        <item name="dial">hotmob_android_v2_video_dial_popup</item>
        <item name="sms">hotmob_android_v2_video_sms_popup</item>
        <item name="email">hotmob_android_v2_video_email_popup</item>
        <item name="youtube">hotmob_android_v2_video_youtube_popup</item>
        <item name="internal">hotmob_android_v2_video_internal_popup</item>
    </string-array>

    <!-- Mediation -->

    <string-array name="mediation_banner">
        <item name="inapp">/13648685/hotmob_android_v2_html_inapp_banner</item>
        <item name="video_banner">/13648685/hotmob_uat_android_videoads_banner</item>
        <item name="celtra_expand">/13648685/hotmob_android_v2_celtra_banner_maxi</item>
        <item name="celtra_resize">/13648685/hotmob_android_v2_celtra_banner_resize</item>
    </string-array>

    <string-array name="mediation_interstitial">
        <item name="inapp">/13648685/hotmob_android_v2_html_inapp_popup</item>
        <item name="video">/13648685/hotmob_android_v2_video_inapp_popup</item>
        <item name="celtra">/13648685/hotmob_uat_android_html_mraid_celtra_popup</item>
    </string-array>

    <!-- Other -->

    <string-array name="other_creative_actions">

    </string-array>

    <string-array name="other_banner_adcodes">

    </string-array>

    <string-array name="other_creative_actions_interstitial">

    </string-array>

    <string-array name="other_interstitial_adcodes">

    </string-array>
</resources>
