<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hotmob.android.example.banner.HTMLBannerFragment">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/creative_list_direct_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

    </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/creative_list_html_mraid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/adcode_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adcode_here"
            android:textAlignment="center"/>

        <RelativeLayout
            android:id="@+id/banner_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/banner_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_light"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/width_full_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/width_fullscreenwidth"/>

        <Button
            android:id="@+id/width_320_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/width_320"/>

        <Button
            android:id="@+id/width_200_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/width_200" />

    </LinearLayout>

</LinearLayout>
